src/test/ui/error-codes/E0243.stderr
error[E0243]: wrong number of type arguments: expected 1, found 0
  --> $DIR/E0243.rs:12:17
   |
LL | struct Bar { x: Foo }
   |                 ^^^ expected 1 type argument

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0243"
